kubernetes/ingress/ingress-nginx-microk8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/rewrite-target: /$1   #new
  name: i-go-go-ingress
  namespace: i-go-go-ns
spec:
  # tls:
  # - hosts:
  #   - i-go-go.local
  #   secretName: i-go-go-tls-secret
  rules:
  - host: i-go-go.local
    http:
      paths:
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: i-go-go-service
            port:
              number: 3000
